chore: 优化 .gitattributes 配置以将项目主语言识别为 HTML

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
-*.html linguist-detectable=true
-*.js linguist-detectable=true
-*.css linguist-detectable=true
-index.html linguist-language=HTML
+*.js linguist-vendored
+*.css linguist-vendored
+*.html linguist-dominant-language=HTML
